--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+    # url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
@@ -19,7 +19,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /files/Lehong_Wang_CV.pdf
+    url: /files/Yifu_Yuan_CV.pdf
     
   # - title: "Guide"
   #   url: /markdown/
