updated CV and class project layout

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /files/Yifu_Yuan_CV.pdf
+    url: /files/CV_Yifu_Yuan.pdf
     
   # - title: "Guide"
   #   url: /markdown/
