--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
-    url: /files/CV_Yifu_Yuan.pdf
+  # - title: "CV"
+    # url: /files/CV_Yifu_Yuan.pdf
     
   # - title: "Guide"
   #   url: /markdown/
